--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    width: 220px;
+    width: 170px;
     background-color: #f4f4f4;
     height: calc(100vh - 60px);
 }
